2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-ttls.c
		- (eap_method_ttls_new): fill anonymous username and CA cert

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-leap.c
		- (ws_leap_new): fill leap password and username

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new): fill passwords, identity, and certificates

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
		- (main): init the crypto system so that NSS and gnutls don't segfault
			when editing EAP-TLS and EAP-TTLS connections

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-psk.c
		- (ws_wpa_psk_new): fill WPA key

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (security_combo_init): fix item counting to determine default security
			type

	* src/connection-editor/page-wireless-security.c
		- (ce_page_wireless_security_new): fix item counting to determine
			default security type

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_deactivate_cb, nma_menu_clear): punt the menu destruction
			to a low-priority idle handler so that any menu item 'activate'
			signals fire before the menu is destroyed

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_create): connect to the menu's deactivate signal
		- (nma_menu_deactivate_cb): free menu items (and thus devices) when
			the menu disappears to ensure that everything gets unreffed
			properly.  Previously, since the menu items would only get unreffed
			when the menu dropped down again, devices wouldn't get disposed of
			when NetworkManager went away, and when NM would start back up again,
			the applet would have a stale AP and device list.

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless-security.c
		- (get_default_type_for_security): unencrypted connections shouldn't
			have a wireless-security setting